--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -50,10 +50,11 @@
 
         @media only screen and (max-width: $lg) {
             padding-top: 100px;
+            margin: 0 auto;
         }
 
-        @media only screen and (max-width: $lg) {
-            margin: 0 auto;
+        @media only screen and (max-width: $md) {
+            padding: 60px 30px;
         }
 
         &:last-of-type {
@@ -149,7 +150,7 @@
     @media only screen and (max-width: $sm) {
         width: 100%;
         flex-direction: column;
-        gap: 60px;
+        gap: 30px;
     }
 
     &::after {
@@ -161,10 +162,7 @@
         left: 50%;
 
         @media only screen and (max-width: $sm) {
-            width: 100%;
-            height: 1px;
-            left: 0;
-            top: calc(50% + 15px);
+            display: none;
         }
     }
 
