--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -1,21 +1,5 @@
 .team-banner {
     background-image: url(/assets/images/team/BANNER.jpg);
-    padding-bottom: 250px;
-    background-size: 100%;
-
-    @media only screen and (max-width: $lg) {
-        padding-bottom: 75px;
-    }
-
-    @media only screen and (max-width: $sm) {
-        padding-bottom: 35px;
-    }
-
-    .subpage-banner__title {
-        @media only screen and (max-width: $lg) {
-            padding-top: 45px;
-        }
-    }
 }
 
 .banner-bottom {
@@ -26,23 +10,13 @@
     }
 }
 
-.banner-bottom__inner {
-    width: 736px;
-    height: 245px;
-    background: #F4F4F4;
-    position: absolute;
-    top: -125px;
-    padding: 100px 92px 80px 98px;
-    font-family: TTNorms;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 20px;
-    line-height: 30px;
-    color: $elephant;
-    margin-left: -20px;
-}
-
 .team {
+    margin-bottom: 150px;
+
+    @media only screen and (max-width: $md) {
+        margin-bottom: 80px
+    }
+
     .container {
         padding: 200px 50px 95px;
         background-color: $vistaWhite;
@@ -62,14 +36,6 @@
         }
     }
 
-    .team-row {
-        padding-bottom: 51px;
-        margin-bottom: 51px;
-        border-bottom: 2px solid $wheat;
-    }
-}
-
-.team__image {
     img {
         width: 379px;
         height: 379px;
@@ -77,26 +43,32 @@
         background-color: white;
         border: 2px solid $wheat;
 
+        @media only screen and (max-width: $xl) {
+            width: 80%;
+            height: auto;
+        }
+
         @media only screen and (max-width: $md) {
             margin: 0 auto 25px;
         }
     }
 }
 
-.team__inner {
-    .name {
-        font-family: TTNorms;
-        font-style: normal;
-        font-weight: 300;
-        font-size: 36px;
-        line-height: 42px;
+.team-members {
+    .row {
+        padding-bottom: 51px;
+        margin-bottom: 51px;
+        border-bottom: 2px solid $wheat;
 
-        @media only screen and (max-width: $sm) {
-            font-size: 22px;
+        &:last-child {
+            border-bottom: 0px;
+            padding-bottom: 0px;
         }
     }
+}
 
-    .designation {
+.team__inner {
+    span {
         font-family: TTNorms;
         font-style: normal;
         font-weight: 300;
@@ -110,13 +82,14 @@
         }
     }
 
-    .experties {
+    ul {
         font-family: TTNorms;
         font-style: normal;
         font-weight: normal;
         font-size: 20px;
         line-height: 30px;
         margin-bottom: 10px;
+        padding-left: 20px;
 
         @media only screen and (max-width: $sm) {
             font-size: 16px;
@@ -124,62 +97,13 @@
         }
     }
 
-    .description {
+    p {
         font-family: TTNorms;
         font-style: normal;
         font-weight: 300;
         font-size: 20px;
         line-height: 30px;
         margin-bottom: 0;
-    }
-
-    ul {
-        padding-left: 20px;
-    }
-}
-
-.team__btns {
-    display: flex;
-    justify-content: space-between;
-    width: max-content;
-    position: relative;
-    width: 522px;
-    border-top: 1px solid $wheat;
-    padding-top: 30px;
-    
-    @media only screen and (max-width: $sm) {
-        width: 100%;
-        flex-direction: column;
-        gap: 30px;
-    }
-
-    &::after {
-        position: absolute;
-        content: '';
-        width: 1px;
-        height: calc(100% - 30px);
-        background-color: $wheat;
-        left: 50%;
-
-        @media only screen and (max-width: $sm) {
-            display: none;
-        }
-    }
-
-    button {
-        @include linear-gradient(270.23deg, #F1CDA8 0.19%, #F6DEC6 99.82%);
-        width: 222px;
-        font-size: 20px;
-        line-height: 24px;
-        height: 65px;
-        padding: 0;
-
-        @media only screen and (max-width: $sm) {
-            margin: 0 auto;
-            width: 200px;
-            height: 55px;
-            font-size: 16px;
-        }
     }
 }
 
