--- a/src/scss/components/_philosophy.scss
+++ b/src/scss/components/_philosophy.scss
@@ -1,24 +1,15 @@
 .philosophy-banner {
     background-image: url(/assets/images/philosophy/banner.png);
-    padding-bottom: 250px;
     background-size: 122%;
-
-    @media only screen and (max-width: $lg) {
-        padding-bottom: 75px;
-    }
-
-    @media only screen and (max-width: $sm) {
-        padding-bottom: 35px;
-    }
-
-    .subpage-banner__title {
-        @media only screen and (max-width: $lg) {
-            padding-top: 45px;
-        }
-    }
 }
 
 .philosophy {
+    margin-bottom: 150px;
+
+    @media only screen and (max-width: $md) {
+        margin-bottom: 80px
+    }
+    
     .container {
         padding: 200px 50px 95px;
         background-color: $vistaWhite;
@@ -36,40 +27,17 @@
 }
 
 .philosophy-inner {
-    .title {
-        font-family: TTNorms;
-        font-style: normal;
-        font-weight: 300;
-        font-size: 50px;
-        line-height: 59px;
-        margin-bottom: 31px;
-        color: $elephant;
-
-        @media only screen and (max-width: $sm) {
-            font-size: 30px;
-            line-height: normal;
-        }
+    h2 {
+        margin-bottom: 25px
     }
 
-    .description,
-    div {
-        font-family: TTNorms;
-        font-style: normal;
-        font-weight: 300;
-        font-size: 20px;
-        line-height: 30px;
+    p {
         margin-bottom: 46px;
         width: 837px;
-        color: $elephant;
 
         @media only screen and (max-width: $md) {
             width: 100%;
         }   
-
-        @media only screen and (max-width: $sm) {
-            font-size: 16px;
-            line-height: 150%;
-        }
     }
 
     div {
