Restructured gallery and added lightbox

--- a/src/scss/base/_universalStyles.scss
+++ b/src/scss/base/_universalStyles.scss
@@ -353,6 +353,12 @@ span {
 }
 
 .banner-bottom {
+  position: relative;
+
+  @media only screen and (max-width: $lg) {
+      display: none;
+  }
+  
   p {
     width: 736px;
     height: 245px;
