--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -275,10 +275,10 @@ span {
   border-right: 3px solid #F4D1AE;
 }
 
-.img-hover, .gallery__image {
+.img-hover, .gallery img {
   transition: all 0.5s ease;
 }
-.img-hover:hover, .gallery__image:hover {
+.img-hover:hover, .gallery img:hover {
   transform: scale(1.05);
   transition: all 0.5s ease;
 }
@@ -370,6 +370,14 @@ span {
   }
 }
 
+.banner-bottom {
+  position: relative;
+}
+@media only screen and (max-width: 1200px) {
+  .banner-bottom {
+    display: none;
+  }
+}
 .banner-bottom p {
   width: 736px;
   height: 245px;
@@ -769,7 +777,7 @@ header {
 .footer__logo {
   top: -10px;
   left: 50%;
-  transform: translate(-50%, -25%);
+  transform: translate(-55%, -25%);
 }
 .footer__logo span {
   display: block;
@@ -1256,15 +1264,6 @@ header {
   background-image: url(/assets/images/team/BANNER.jpg);
 }
 
-.banner-bottom {
-  position: relative;
-}
-@media only screen and (max-width: 1200px) {
-  .banner-bottom {
-    display: none;
-  }
-}
-
 .team {
   margin-bottom: 150px;
 }
@@ -1368,6 +1367,14 @@ header {
   }
 }
 
+.gallery {
+  margin-bottom: 150px;
+}
+@media only screen and (max-width: 991px) {
+  .gallery {
+    margin-bottom: 80px;
+  }
+}
 .gallery .container {
   padding: 200px 50px 95px;
   background-color: #FAF6F2;
@@ -1395,22 +1402,55 @@ header {
     margin-bottom: 0;
   }
 }
-
-.gallery__image {
+.gallery img {
   padding: 19px;
   background-color: white;
   border: 2px solid #F4D1AE;
 }
 @media only screen and (max-width: 991px) {
-  .gallery__image {
+  .gallery img {
     margin: 0 auto 35px;
     width: 100%;
   }
 }
 @media only screen and (max-width: 991px) {
-  .gallery__image:last-of-type {
+  .gallery img:last-of-type {
     margin-bottom: 0;
   }
+}
+
+.lb-data .lb-details {
+  width: 100%;
+}
+.lb-data .lb-caption {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 150%;
+  color: white;
+  font-family: "TTNorms";
+  margin-top: 10px;
+  display: block;
+  margin-bottom: 5px;
+}
+.lb-data .lb-number {
+  font-family: "TTNorms";
+}
+.lb-data .lb-close {
+  background-image: url(/assets/images/close.png);
+}
+
+.lb-nav a.lb-prev {
+  background-image: url(/assets/images/lightbpxPrev.png);
+}
+.lb-nav a.lb-next {
+  background-image: url(/assets/images/lightbpxNext.png);
+}
+.lb-nav .lb-cancel {
+  background-image: url(/assets/images/loading.gif);
+}
+.lb-nav a.lb-prev:hover,
+.lb-nav a.lb-next:hover {
+  opacity: 1;
 }
 
 .philosophy-banner {
